# Acf

./: .clang-format  .gitignore  .rebase-marker  AUTO_FIX_BUTTON_FEATURE.md  AUTO_FIX_CHECK_RUN_FIX.md  AUTO_FIX_IMPLEMENTATION_SUMMARY.md  AUTO_FIX_MANUAL_TRIGGER_GUIDE.md  AUTO_FIX_ROUND_6_INVESTIGATION.md  AUTO_FIX_TEST_ROUND_2.md  AUTO_FIX_TEST_ROUND_2_SUMMARY.md  AUTO_FIX_TEST_ROUND_3.md  AUTO_FIX_TEST_ROUND_3_SUMMARY.md  AUTO_FIX_TEST_ROUND_4.md  AUTO_FIX_TEST_ROUND_4_COMPLETE.md  AUTO_FIX_TEST_ROUND_4_SUMMARY.md  AUTO_FIX_TEST_ROUND_5.md  AUTO_FIX_TEST_ROUND_5_COMPLETE.md  AUTO_FIX_TEST_ROUND_5_SUMMARY.md  AUTO_FIX_TEST_ROUND_6.md  AUTO_FIX_TEST_ROUND_6_COMPLETE.md  AUTO_FIX_TEST_ROUND_6_SESSION_COMPLETE.md  AUTO_FIX_TEST_ROUND_6_SUMMARY.md  AUTO_FIX_TEST_ROUND_7.md  AUTO_FIX_TEST_ROUND_7_SESSION_COMPLETE.md  AUTO_FIX_TEST_ROUND_7_SUMMARY.md  AUTO_FIX_TEST_SESSION_COMPLETE.md  AUTO_FIX_WORKFLOW_FINAL_REPORT.md  AUTO_FIX_WORKFLOW_ROOT_CAUSE_FIX.md  AUTO_FIX_WORKFLOW_ROUND_6_FINAL_SUMMARY.md  AUTO_FIX_WORKFLOW_SESSION_COMPLETE.md  AUTO_FIX_WORKFLOW_TEST_FINAL_SUMMARY.md  BUILD_FIX_WORKFLOW_SESSION_COMPLETE.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  COPILOT_MENTION_SOLUTION.md  CRA_COMPLIANCE.md  CRA_IMPLEMENTATION_SUMMARY.md  DOMAIN_ORIENTED_STRUCTURE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  (+22 more)
.github/: SECURITY.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: ANALYZE_BUILD_ERRORS_FIX.md  AUTOMATIC_BUILD_ANALYSIS.md  AUTO_FIX_CURRENT_STATUS.md  AUTO_FIX_DOCUMENTATION.md  AUTO_FIX_FINAL_REPORT.md  AUTO_FIX_NO_APPROVAL_SETUP.md  AUTO_FIX_TESTING.md  AUTO_FIX_TEST_EXECUTION_LOG.md  AUTO_FIX_TEST_RESULTS.md  AUTO_FIX_TEST_SUMMARY.md  AUTO_FIX_TRIGGER_INVESTIGATION.md  AUTO_FIX_YAML_SYNTAX_FIX.md  BUILD_ERROR_ANALYSIS_COMPLETE_SUMMARY.md  BUILD_ERROR_ANALYSIS_FIX.md  BUILD_FIX_WORKFLOW_TESTING_SUMMARY.md  BUILD_FIX_WORKFLOW_TEST_EXECUTION_GUIDE.md  BUILD_FIX_WORKFLOW_TEST_PLAN.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY_DE.md  TEAMCITY_INTEGRATED_ANALYSIS.md  TEAMCITY_INTEGRATION.md  TESTING_README.md  TEST_SESSION_SUMMARY.md  TEST_TRIGGER_VERIFICATION.md  WORKFLOW_FLOW.md  analyze-build-errors.yml  auto-fix-on-failure.yml  ci.yml  doxygen-pages.yml  doxygen-pages.yml.disabled  post-autofix-button.yml  post-build-analysis.yml  security-scanning.yml  stats-pages.yml  teamcity-trigger.yml  test-auto-fix-logic.sh  test-build-error-analysis.sh  test-wait-logic.js  update-release-2.0.0.yml
.teamcity/: README.md  settings.kts
ACF/Docs/: Richtlinien.doc
ACF/Include/: ACF.h
Config/: AcfTestConfig.awc  DevFull.xpc
Config/CMake/: AcfEnv.cmake  AcfStd.cmake  ComponentConfig.cmake  CustomBuild.cmake  GeneralConfig.cmake  PluginConfig.cmake  ProjectRoot.cmake  WindeployQt.cmake
Config/Ecl/: ConvertToEcl.js  TestTransform.bat
Config/Eclipse/: ConvertAll.js  ConvertToEcl.js  VC2Ecl.xslt  VC2EclC.xslt
Config/QMake/: AcfTool.config  AcfVersion.pri.xtrsvn  ConvertToQMake.js  CopyQMakeToSubdir.js  CopyVCProjToSubdir.js  CustomBuild.pri  FromVC.xslt  GeneralConfig.pri  QtGuiBaseConfig.pri  TestConfig.pri  TestRunnerConfig.pri
Config/Qbs/: AcfRules.qbs  ApplicationProduct.qbs  ComponentProduct.qbs  GeneralProduct.qbs  QtRules.qbs  StaticProduct.qbs
Config/Subversion/: config.txt
Config/Test/: TestConfig.pri  TestRunnerConfig.pri  run_tests.bat
Config/Tortoise/: config.txt
Config/VC10/: ConvertFromVC9.js  General.props
Config/VC12/: Acf.props
Config/VC8/: Acf.rules  ConvertFromVC9.js  General.vsprops  Static.vsprops  VCHelper.xslt
Config/VC9/: Acf.rules  (+4 more)
Docs/: ComponentFramework.md  ComponentFrameworkExamples.md  DocumentViewExamples.md  DocumentViewFrameworkREADME.md  FileLibraryTestEnhancements.md
Impl/QtGuiPck/CMake/: CMakeLists.txt
Include/: ACF.h
Include/iimg/Test/CMake/: CMakeLists.txt
Install/: ACF.iss  CreateDistribution.bat  Create_Doxyfile.alx  Create_Doxyfile.arx  Create_FromQMake_VC9_OpenSource.alx  Create_FromQMake_VC9_OpenSource.arx  Create_Installations.bat  Create_TechnicalDoc.bat  Create_VC8_LGPL.arx  Create_VC9_LGPL.arx  Create_VC9_OpenSource.alx  Create_VC9_OpenSource.arx  Create_VC_LGPL.arx  Create_VC_LGPL.bat  DistAllConfig.xml  DistConfig.xml  Doxyfile  Header_Commercial.txt  Header_LGPL.txt  Install.iss  MakeVCProjects.bat  Rebuild.bat  Rebuild_VC8.bat  _Create_FromQMake_VC9_OpenSource.bat  _Create_VC12_Installation.bat  _Create_VC12_OpenSource.bat  _Create_VC12_Public.bat  _Create_VC15_Installation.bat  _Create_VC15_OpenSource.bat  _Create_VC16_OpenSource.bat  _Create_VC17_OpenSource.bat  _Create_VC8_Installation.bat  _Create_VC9_Installation.bat  _Create_VC9_OpenSource.bat
Partitura/: Compositor.alx  Compositor.arx  NewCompositor.alx  NewCompositor.arx
Tests/: IBASE_TEST_ADDITIONS.md  README.md
Tests/AutoPersistenceTest/CMake/: CMakeLists.txt
Tests/IqtComponentTest/CMake/: CMakeLists.txt
Tests/SerializationRegressionTest/CMake/: CMakeLists.txt
Tests/VarIndexTest/CMake/: CMakeLists.txt
build_test/: CMakeCache.txt
scripts/: README.md  generate_stats.py  stats_template.html
(+3814 files in other folders)
